<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/principalFragment">
    <fragment
        android:id="@+id/principalFragment"
        android:name="qbo.com.appkea2buttonnavigationv2.PrincipalFragment"
        android:label="@string/valtituloprincipal"
        tools:layout="@layout/fragment_principal" />
    <fragment
        android:id="@+id/multimediaFragment"
        android:name="qbo.com.appkea2buttonnavigationv2.MultimediaFragment"
        android:label="@string/valtitulomultimedia"
        tools:layout="@layout/fragment_multimedia" />
    <fragment
        android:id="@+id/notificacionesFragment"
        android:name="qbo.com.appkea2buttonnavigationv2.NotificacionesFragment"
        android:label="@string/valtitulonotificaciones"
        tools:layout="@layout/fragment_notificaciones" />
</navigation>